Bug 29611 - Xorg -configure fails
Summary: Xorg -configure fails
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: medium major
Assignee: Carl Worth
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-17 06:11 UTC by Sergey Samokhin
Modified: 2010-08-19 12:08 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
"lsmod | grep i915" output (357 bytes, text/plain)
2010-08-17 06:12 UTC, Sergey Samokhin
no flags Details
"sudo lspci -vv -nn" output (32.12 KB, text/plain)
2010-08-17 06:13 UTC, Sergey Samokhin
no flags Details
"sudo Xorg -configure" output (1.57 KB, text/plain)
2010-08-17 06:14 UTC, Sergey Samokhin
no flags Details
Xorg.0.log (27.50 KB, text/plain)
2010-08-17 06:16 UTC, Sergey Samokhin
no flags Details
menu.lst (1.47 KB, text/plain)
2010-08-17 06:17 UTC, Sergey Samokhin
no flags Details
"uname -a" output (139 bytes, text/plain)
2010-08-17 06:18 UTC, Sergey Samokhin
no flags Details

Description Sergey Samokhin 2010-08-17 06:11:08 UTC
"sudo Xorg -configure" fails on my ThinkPad T510 with error:

(EE) intel(0): No kernel modesetting driver detected.

So I cannot generate working xorg.conf for further tuning. Although, Xorg works just fine without config file, I think that "Xorg -configure" should work also.

It's strange, because i915 module is loaded.

I tried to regenerate initramfs with intel_agp and i915 modules included (http://wiki.archlinux.org/index.php/Intel), but it didn't help

KMS is enabled in my kernel by default and working.

Environment:

archlinux i686 current
xorg-server 1.8.1.902
xf86-video-intel 2.12.0
intel-dri 7.8.2
kernel26 2.6.34.3

Attached files:

* Detailed output of "sudo Xorg -configure" is in xorg_configure.txt
* i915 module has been loaded before "Xorg -configure" (see lsmod_grep_i915.txt)
* "sudo lspci -vv -nn" output is in lspci_vv_nn.txt
* Log of running Xorg (without xorg.conf) is in Xorg.0.log
* Parameters passed to my kernel is in menu.lst
* kernel info is in uname_a.txt
Comment 1 Sergey Samokhin 2010-08-17 06:12:04 UTC
Created attachment 37911 [details]
"lsmod | grep i915" output
Comment 2 Sergey Samokhin 2010-08-17 06:13:39 UTC
Created attachment 37912 [details]
"sudo lspci -vv -nn" output
Comment 3 Sergey Samokhin 2010-08-17 06:14:56 UTC
Created attachment 37913 [details]
"sudo Xorg -configure" output
Comment 4 Sergey Samokhin 2010-08-17 06:16:51 UTC
Created attachment 37914 [details]
Xorg.0.log
Comment 5 Sergey Samokhin 2010-08-17 06:17:58 UTC
Created attachment 37915 [details]
menu.lst
Comment 6 Sergey Samokhin 2010-08-17 06:18:32 UTC
Created attachment 37916 [details]
"uname -a" output
Comment 7 Sergey Samokhin 2010-08-19 06:22:45 UTC
Have just updated kernel to 2.6.35.2 - didn't help.
Comment 8 Chris Wilson 2010-08-19 12:08:45 UTC
commit 8b04b350a983b89eb2d741f55baa297a933ac6ea
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Aug 19 20:05:08 2010 +0100

    Open-code DRICreatePCIBusID()
    
    During -configure we would attempt to query the availablility of KMS
    before the DRI module was loaded, thus we were unable to create a valid
    bus identifier and so the query failed and we disowned the device.
    
    Fixes:
    
      Bug 29611 - Xorg -configure fails
      https://bugs.freedesktop.org/show_bug.cgi?id=29611
    
    Reported-by: Sergey Samokhin <prikrutil@gmail.com>
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.